Changelog
=========

2.2.1 (2012-02-15)
~~~~~~~~~~~~~~~~~~

- Only require Chameleon >= 2.4, was needlessly bumped in last release.

- Add test extra, remove versions from buildout.cfg.


2.2 (2012-01-08)
~~~~~~~~~~~~~~~~

Features:

- Whitespace between attributes is now reduced to a single whitespace
  character.

- The ``request`` symbol is no longer required to evaluate a path
  expression; it now defaults to ``None`` if not present in the
  namespace.

Bugfixes:

- The content provider expression now correctly applies TAL namespace
  data.

Changes:

- The ``ZopeTraverser`` class has been removed and replaced with a
  simple function.

2.1.5 (2011-11-24)
~~~~~~~~~~~~~~~~~~

- Use non-strict mode if available for compatibility with the
  reference engine where expressions are only compiled at evaluation
  time.

2.1.4 (2011-09-14)
~~~~~~~~~~~~~~~~~~

- The provider expression is now first evaluated as a string
  expression, the result of which is used as the content provider
  name.

  This fixes an issue where (provider-) string expressions would not
  get evaluated correctly, e.g. ``provider: ${mgr}``.

2.1.3 (2011-08-22)
~~~~~~~~~~~~~~~~~~

- Configure HTML boolean attributes (in HTML-mode only)::

      "compact", "nowrap", "ismap", "declare", "noshade",
      "checked", "disabled", "readonly", "multiple", "selected",
      "noresize", "defer"

2.1.2 (2011-08-19)
~~~~~~~~~~~~~~~~~~

- Enable option ``literal_false`` to get the behavior that a value of
  ``False`` does not drop an attribute.

2.1.1 (2011-08-11)
~~~~~~~~~~~~~~~~~~

- Make sure the builtin names 'path' and 'exists' can be redefined.

- Guard ``sys.modules`` (mapped to the builtin variable "modules")
  against import-time side effects using ``ProxyFactory``.

2.1 (2011-07-28)
~~~~~~~~~~~~~~~~

- Use dynamic expression evaluation framework that comes included with
  Chameleon.

2.0 (2011-07-14)
~~~~~~~~~~~~~~~~

- Point release.

- Move implementation-specific context setup to ``render``